Change website title

--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   GitHub Repository: https://github.com/MichaelMure/WalletGenerator.net
   -->
 
-  <title>WalletGenerator.net - Universal Paper wallet generator for Ritocoin and other cryptocurrencies</title>
+  <title>Ritocoin Paper Wallet Generator</title>
 
   <script type="text/javascript">
 //array.map.js
